# 3_Course_VL_CourseWork

./: .clang-format  .gitignore  CMakeLists.txt  README.md  application.hpp  buffer.hpp  camera.hpp  car_manager.hpp  cgCourseWork  color_buffer.hpp  cube_map_texture.hpp  functions.hpp  lights_manager.hpp  main.cpp  mesh.hpp  obj_loader.hpp  plane.h  renderer.hpp  shader.hpp  texture.hpp  window.hpp
Buffers/: index_buffer.hpp  normals_buffer.hpp  texture_buffer.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
cmake/: FindGLFW.cmake  FindGLFW3.cmake
libs/: lodepng.cpp  lodepng.hpp
libs/assimp/contrib/zlib/contrib/minizip/: ioapi.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: CMakeLists.txt
libs/glfw/src/: CMakeLists.txt
libs/glm/: CMakeLists.txt
libs/glm/glm/: CMakeLists.txt
resources/models/: Cartoon_Low_pOly_Solar_Panel.mtl  Fan.mb  Rover.mtl  Starship.mtl  bench.blend  pine.mtl
shaders/: lighting_shader.glsl  shader_fog.glsl  shader_particle.glsl  shader_shadow_debug.glsl  shadow_shader.glsl  simple_shader.glsl  skybox_shader.glsl
